--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pymysql==0.10.1
 pytz==2020.1
 python-dateutil==2.4.1
 validator_collection==1.5.0
-discord-py-interactions==4.2.1
-interactions-autosharder==1.0.2
+discord-py-interactions==4.3.1
 python-dotenv
 git+https://github.com/Catalyst4222/interactions-tasks
+git+https://github.com/interactions-py/autosharder
