--- a/settings.dist.json
+++ b/settings.dist.json
@@ -1,11 +1,11 @@
 {
-    "token": "",
-    "prefix": "~",
+    "token": "MTA5NTAzNTgwNDMzNTczODkwMA.G9TCv_.nBdW0FwlH01i-uqKZZNfCdsalgVUvZIPb2gzz8",
+    "prefix": "!",
     "version": "",
     "src": "",
     "patch_notes": "",
     "help_server": "",
-    "invite_url": "",
+    "invite_url": "https://discord.com/api/oauth2/authorize?client_id=1095035804335738900&permissions=8&scope=bot",
     "avatar": "",
     "db_host": "",
     "db_user": "",
